--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "test",
+  "name": "real-time-chat",
   "version": "1.0.0",
-  "description": "",
+  "description": "chat app server side",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "build": "npm build"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon start"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Azizbek Mukhtorov",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.1",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0",
-    "nodemon": "^2.0.20",
-    "socket.io": "^4.5.4",
-    "ws": "^8.12.0"
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.4.3",
+    "nodemon": "^3.0.1",
+    "validator": "^13.11.0"
   }
 }
